--- a/COLOR-INPUT.css
+++ b/COLOR-INPUT.css
@@ -10,8 +10,13 @@ input[type=number] {-moz-appearance: textfield;}
 
 /* Font */
 @font-face {
-  font-family: "Geist Mono", monospace;
-  src: url(../fonts/GeistMonoVF.woff2);
+  font-family: "Geist Mono";
+  src: url(/font/GeistMonoVF.woff2);
+}
+
+@font-face {
+  font-family: "Geist";
+  src: url(/font/GeistVariableVF.woff2);
 }
 
 /* Roots */
@@ -22,38 +27,21 @@ input[type=number] {-moz-appearance: textfield;}
 
 /* Styling Layout */
 main {
+  font: 24px/24px "Geist";
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 2rem;
   height: 100vh;
 }
 
-/* Styling Component */
-.color-input-container {
-  position: relative;
-  max-width: 400px;
-  width: 100%;
-  height: 200px;
-}
-
-H6 {
-  font: 400 var(--blocksize-small)/0.9 "Geist Mono", monospace;
-  position: absolute;
-  inset: var(--blocksize-medium);
-  z-index: 1;
-  pointer-events: none;
-}
-
-.color-input:focus-within {
-  outline: 4px solid blue;
-  outline-offset: 4px;
-}
 
 .color-input {
   position: relative;
-  height: 100%;
-  width: 100%;
-  border-radius: var(--blocksize-small);
+  min-height: 2rem;
+  min-width: 2rem;
+  border-radius: 0.25rem;
   overflow: hidden;
 }
 
@@ -63,37 +51,134 @@ input[type=color] {
   transform: translate(-0.375rem, -0.375rem);
 }
 
-.number-input{
-  position: absolute;
-  bottom: var(--blocksize-medium);
-  left: var(--blocksize-medium);
-  font: 800 2rem "Geist Mono", monospace;
-}
-
-label{
-  height: 32px;
-  display: flex;
-  align-items: baseline;
-  width: fit-content;
-}
-
-
-button {
-  cursor: pointer;
+label.COLOR-INPUT-CONTAINER-SIMPLE{
+  border: 1px solid hsl(0, 0%, 85%);
   padding: 0.5rem;
-  position: absolute;
-  bottom: var(--blocksize-small);
-  right: var(--blocksize-small);
+  border-radius: 0.5rem;
+  gap: 0.5rem;
+  display: flex;
+  position: relative;
+  max-width: 400px;
+
+  span.label {
+    position: absolute;
+    left: 0;
+    top: 0;
+    transform: translateY(calc(-100% - 4px));
+    font: 16px/20px "Geist";
+    color: hsl(0, 0%, 35%);
+  }
+  
+  .color-input:focus-within {
+    outline: 2px solid blue;
+    outline-offset: 3px;
+  }
+  
+  *:focus-visible {
+    outline: 2px solid blue;
+    outline-offset: 3px;
+    border-radius: 0.125rem;
+  }
+
+  button {cursor: pointer;}
+
+  .warning, .copy {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    transform: translateY(calc(100% + 4px));
+    font: 16px/20px "Geist";
+    color: #BD0029;
+    pointer-events: none;
+  }
+
+  span.show {
+    display: inline-block;
+    opacity: 1 !important;
+    transition: opacity 1s ease-in;
+  }
+
+  span:not(.label) {
+    opacity: 0;
+    transition: opacity 1s ease-in;
+  }
+
+  span.copy {
+    color: black;
+  }
+
+  input[type=text] {
+    max-width: 300px;
+  }
 }
 
-/* Styling State */
-input:hover, 
-button:hover, 
-input:focus-visible, 
-button:focus-visible {
-  background-color: rgba(255, 255, 255, 0.15);
-  border-radius: 0.25rem;
-  outline: 2px rgb(57, 57, 255) solid;
-  border-radius: 0.25rem;
-  z-index: 2;
+
+
+
+
+.color-input-container {
+  position: relative;
+  max-width: 400px;
+  width: 100%;
+  height: 200px;
+
+  .color-input {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    border-radius: var(--blocksize-small);
+    overflow: hidden;
+  }
+
+  H6 {
+    font: 400 var(--blocksize-small)/0.9 "Geist Mono", monospace;
+    position: absolute;
+    inset: var(--blocksize-medium);
+    z-index: 1;
+    pointer-events: none;
+  }
+
+  .color-input:focus-within {
+    outline: 4px solid blue;
+    outline-offset: 4px;
+  }
+
+
+
+  .number-input{
+    position: absolute;
+    bottom: var(--blocksize-medium);
+    left: var(--blocksize-medium);
+    font: 800 2rem "Geist Mono", monospace;
+  }
+
+  label{
+    height: 32px;
+    display: flex;
+    align-items: baseline;
+    width: fit-content;
+  }
+
+
+  button {
+    cursor: pointer;
+    padding: 0.5rem;
+    position: absolute;
+    bottom: var(--blocksize-small);
+    right: var(--blocksize-small);
+  }
+
+  /* Styling State */
+  input:hover, 
+  button:hover, 
+  input:focus-visible, 
+  button:focus-visible {
+    background-color: rgba(255, 255, 255, 0.15);
+    border-radius: 0.25rem;
+    outline: 2px rgb(57, 57, 255) solid;
+    border-radius: 0.25rem;
+    z-index: 2;
+  }
 }
+
